--- a/languages.yaml
+++ b/languages.yaml
@@ -8,3 +8,8 @@ ru:
     FOUND_RESULTS: "Результатов: %s"
     FOUND_IN: "(<span>%s</span>)"
     POWERED_BY: "Работает на %s"
+de:
+  PLUGIN_TNTSEARCH:
+    FOUND_RESULTS: "Es wurden %s Resultate"
+    FOUND_IN: "in <span>%s</span> gefunden"
+    POWERED_BY: "Powered by %s"    
